[gd_scene load_steps=4 format=3 uid="uid://bfccac2tnf5g7"]

[ext_resource type="Script" path="res://Scenes/InteractiveObjects/Papers/paper.gd" id="1_f7wip"]
[ext_resource type="Texture2D" uid="uid://7jd0wc27iroq" path="res://Assets/Sprites/Note2.png" id="2_tk3dw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uctyd"]
size = Vector2(514, 670)

[node name="Paper" type="StaticBody2D"]
z_index = 40
script = ExtResource("1_f7wip")

[node name="test_shadow" type="ColorRect" parent="."]
offset_left = -303.0
offset_top = -385.0
offset_right = 312.0
offset_bottom = 405.0
color = Color(0, 0, 0, 1)

[node name="bg" type="ColorRect" parent="."]
offset_left = -295.0
offset_top = -376.0
offset_right = 304.0
offset_bottom = 396.0
color = Color(0.733333, 0.733333, 0.733333, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = -291.0
offset_top = -378.5
offset_right = 291.0
offset_bottom = 378.5
theme_override_font_sizes/normal_font_size = 41
text = "PLACEHOLDER"

[node name="carNumber" type="RichTextLabel" parent="."]
offset_left = -292.0
offset_top = 83.0
offset_right = 274.0
offset_bottom = 146.0
theme_override_font_sizes/normal_font_size = 41
text = "Номер: "

[node name="carColor" type="RichTextLabel" parent="."]
offset_left = -288.0
offset_top = 1.0
offset_right = 278.0
offset_bottom = 64.0
theme_override_font_sizes/normal_font_size = 41
text = "Цвет: "

[node name="carBrand" type="RichTextLabel" parent="."]
offset_left = -286.0
offset_top = -79.0
offset_right = 280.0
offset_bottom = -16.0
theme_override_font_sizes/normal_font_size = 41
text = "Марка: "

[node name="Surname" type="RichTextLabel" parent="."]
offset_left = -286.0
offset_top = -154.0
offset_right = 280.0
offset_bottom = -91.0
theme_override_font_sizes/normal_font_size = 41
text = "Фамилия: "

[node name="Name" type="RichTextLabel" parent="."]
offset_left = -285.0
offset_top = -232.0
offset_right = 281.0
offset_bottom = -169.0
theme_override_font_sizes/normal_font_size = 41
text = "Имя: "

[node name="Button" type="Button" parent="."]
offset_left = -295.0
offset_top = -376.0
offset_right = 305.0
offset_bottom = 397.0
mouse_default_cursor_shape = 6
action_mode = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 2)
shape = SubResource("RectangleShape2D_uctyd")

[node name="Note2" type="Sprite2D" parent="."]
position = Vector2(3.50001, 10)
scale = Vector2(0.543265, 0.555792)
texture = ExtResource("2_tk3dw")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
